ascent_macro_tests/tests/macros/fail/non_existent_body_rule.err.txt
error: Relation non_existent_rule not defined
 --> /tests/macros/fail/non_existent_body_rule.rs:9:17
  |
9 |     rule(n) <-- non_existent_rule();
  |                 ^^^^^^^^^^^^^^^^^
